Added custom font

--- a/example/css/default.css
+++ b/example/css/default.css
@@ -5,7 +5,7 @@
 
 h1 {
     border: 1px solid red;
-    font-family: "Alegreya Sans", sans-serif;
+    font-family: "Blue Highway Linocut", sans-serif;
     font-size: 200px;
     display: flex;
     justify-content: center;
