--- a/example/css/default.css
+++ b/example/css/default.css
@@ -3,11 +3,10 @@
     padding: 0;
 }
 
-h1 {
-    border: 1px solid red;
-    font-family: "Blue Highway Linocut", sans-serif;
-    font-size: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
