--- a/example/css/default.css
+++ b/example/css/default.css
@@ -4,9 +4,6 @@
 }
 
 img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: 500px;
+    height: 350px;
 }
