--- a/example/css/default.css
+++ b/example/css/default.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+@font-face {
+    font-family: WhoopAss;
+    src: url('../fonts/whoopass.otf');
+}
+
 body, html {
     overflow: hidden;
 }
@@ -10,7 +15,7 @@ body, html {
 img {
     width: 800px;
     height: 550px;
-    padding: 8px 5px 0;
+    padding: 8px 25px 0;
     position: absolute;
     top: 0;
     bottom: 0;
