--- a/example/css/default.css
+++ b/example/css/default.css
@@ -12,7 +12,7 @@ body, html {
     overflow: hidden;
 }
 
-img {
+img[is="x-photomask"] {
     width: 800px;
     height: 550px;
     padding: 8px 25px 0;
@@ -23,4 +23,12 @@ img {
     right: 0;
     margin: auto;
     font-family: WhoopAss, Arial, Tahoma, Helvetica, sans-serif;
+}
+
+img.fork {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 149px;
+    height: 149px;
 }
