--- a/example/css/default.css
+++ b/example/css/default.css
@@ -13,8 +13,8 @@ body, html {
 }
 
 img[is="x-photomask"] {
-    width: 800px;
-    height: 550px;
+    width: 720px;
+    height: 400px;
     padding: 8px 25px 0;
     position: absolute;
     top: 0;
@@ -23,6 +23,7 @@ img[is="x-photomask"] {
     right: 0;
     margin: auto;
     font-family: WhoopAss, Arial, Tahoma, Helvetica, sans-serif;
+    background-position: center 30px;
 }
 
 img.fork {
