Removed 'Arial Black' as font possibility

--- a/example/css/default.css
+++ b/example/css/default.css
@@ -24,7 +24,7 @@ img.photomask {
     left: 0;
     right: 0;
     margin: auto;
-    font-family: WhoopAss, "Arial Black", Arial, Tahoma, Helvetica, sans-serif;
+    font-family: WhoopAss, Arial, Tahoma, Helvetica, sans-serif;
     background-position: center 90px;
 }
 
