--- a/example/css/default.css
+++ b/example/css/default.css
@@ -9,10 +9,8 @@ body, html {
 }
 
 img.photomask {
-    background-image: url('../images/meadows.jpg');
-    width: 720px;
-    height: 700px;
-    padding: 8px 25px 0;
+    width: 620px;
+    height: 600px;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -20,31 +18,33 @@ img.photomask {
     right: 0;
     margin: auto;
     font-family: WhoopAss, Arial, Tahoma, Helvetica, sans-serif;
-    background-position: center 90px;
+    background: url('../images/meadows.jpg') center 90px;
 }
 
 ul.controls {
     position: absolute;
-    bottom: 100px;
-    left: 0;
+    bottom: 0;
     right: 0;
+    left: 0;
     margin: auto;
-    width: 700px;
     list-style-type: none;
     z-index: 2;
+    padding: 50px;
 }
 
 ul.controls li {
-    float: left;
     width: 33.333%;
     font-family: Arial, Tahoma, Helvetica, sans-serif;
+    padding: 1px 0;
 }
 
 ul.controls li label {
-    padding-right: 10px;
+    width: 45px;
+    display: inline-block;
     color: rgba(0, 0, 0, .5);
-    font-size: 9px;
-    text-transform: uppercase;
+    font-size: 11px;
+    text-align: right;
+    padding-right: 5px;
 }
 
 ul.controls li input {
